--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: ruby
 matrix:
   fast_finish: true
   include:
+  - rvm: 2.3
+  - rvm: 2.4
+  - rvm: 2.5
+  - rvm: 2.6
   - rvm: 2.7
   - rvm: ruby-head
   allow_failures:
