--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,6 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
   specs:
     runs-on: ubuntu-latest
-    continue-on-error: ${{ matrix.experimental }}
 
     # We want to run on external PRs, but not on our own internal PRs as they'll be run on push event
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != 'umbrellio/rabbit_messaging'
@@ -35,11 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["2.6", "2.7", "3.0"]
-        experimental: [false]
-        include:
-          - ruby: head
-            experimental: true
+        ruby: ["2.7", "3.0", "3.1", "3.2"]
 
     steps:
       - uses: actions/checkout@v2
