--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,7 @@ inherit_gem:
 AllCops:
   DisplayCopNames: true
   TargetRubyVersion: 2.5
+  SuggestExtensions: false
   Include:
     - lib/**/*.rb
     - spec/**/*.rb
@@ -19,3 +20,6 @@ Style/Alias:
 Style/HashConversion:
   Exclude:
     - spec/**/*
+
+RSpec/VerifiedDoubleReference:
+  Enabled: false
