--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,6 @@ jobs:
           bundler-cache: true
       - name: Run Linter
         run: bundle exec rubocop
-      - name: Run audit
-        run: bundle exec rake bundle:audit
       - name: Run specs
         run: bundle exec rspec
       - name: Coveralls
@@ -34,7 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["3.0", "3.1", "3.2", "3.3", "3.4"]
+        ruby: ["3.1", "3.2", "3.3", "3.4"]
 
     steps:
       - uses: actions/checkout@v2
